# QtShapes

./: .gitignore  CMakeLists.txt  QtShapes.pro
include/: GraphicsScene.h  GraphicsView.h  ToolQuickWidget.h  mainwindow.h
include/Shapes/: Ellipse.h  Line.h  Polygon.h  Rectangle.h  ShapeBase.h  ShapesFactory
res/: resources.qrc
res/QML/: ToolBar.qml
src/: GraphicsScene.cpp  GraphicsView.cpp  mainwindow.cpp
src/Tools/: Ellipse.cpp  Line.cpp  Polygon.cpp  Rectangle.cpp
